Factory Method v2 オブジェクトのリスト生成方法の変更